src/objects/Payment_on_Account__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Last_Sync_Time__c</fullName>
        <label>Accounting Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Response__c</fullName>
        <label>Accounting Response</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Sync_Token__c</fullName>
        <label>Accounting Sync Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <description>This is the actual amount paid by customer. If payment surcharges are applied then this will include the surcharge amount else will be same as Total_Payment__c.</description>
        <inlineHelpText>This is the actual amount paid by customer. If payment surcharges are applied then this will include the surcharge amount else will be same as Total_Payment__c.</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_For_QB_AR_Payment_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For QB AR Payment Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_QB_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For QB Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Drawer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Drawer</label>
        <referenceTo>Cash_Drawer__c</referenceTo>
        <relationshipLabel>Payments on Account</relationshipLabel>
        <relationshipName>Payments_on_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments on Account</relationshipLabel>
        <relationshipName>Payments_on_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_on_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>EFTPOS</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Afterpay</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Payment Surcharge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QB_AR_Payment_Accounting_Id__c</fullName>
        <label>QB AR Payment Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_AR_Payment_Accounting_Response__c</fullName>
        <label>QB AR Payment Accounting Response</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QB_AR_Payment_Last_Sync_Time__c</fullName>
        <label>QB AR Payment Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QB_AR_Payment_Sync_Token__c</fullName>
        <label>QB AR Payment Sync Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Accounting_Id__c</fullName>
        <label>QB Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Reference number from Preferred Payment Processor or user entered check/cheque or other reference number for other payment methods</description>
	    <inlineHelpText>Reference number from Preferred Payment Processor or user entered check/cheque or other reference number for other payment methods</inlineHelpText>
	    <label>Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surcharge_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Surcharge POA</label>
        <referenceTo>Payment_on_Account__c</referenceTo>
        <relationshipLabel>Payments on Account</relationshipLabel>
        <relationshipName>Payments_on_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>IF( ISBLANK(Amount_Paid__c) , Total_Payment__c ,  Amount_Paid__c )</formula>
        <label>Total Amount (Formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <label>Total Payment</label>
        <summarizedField>AR_Payment__c.Amount_Paid__c</summarizedField>
        <summaryForeignKey>AR_Payment__c.Payment_on_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment on Account</label>
    <nameField>
        <displayFormat>POA-{00000000}</displayFormat>
        <label>Payment on Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments on Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>